# ase-fast

./: .gitignore  .gitlab-ci.yml  .mailmap  AGENT_CONTEXT.md  Cargo.toml  IMPROVEMENT_ROADMAP.md  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  tests.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
ase/: __init__.py  atom.py  atoms.py  cell.py  constraints.py  dependencies.py  filters.py  formula.py  neighborlist.py  outputs.py  parallel.py  phasediagram.py  phonons.py  pourbaix.py  symbols.py  thermochemistry.py  units.py
ase-extxyz-rs/: Cargo.toml  pyproject.toml
ase-extxyz-rs/src/: lib.rs  reader.rs  writer.rs
ase-geometry-rs/: Cargo.toml  pyproject.toml
ase-geometry-rs/src/: lib.rs  minkowski.rs  supercell.rs
ase-io-rs/: Cargo.toml  pyproject.toml
ase-io-rs/src/: lib.rs  vasp.rs  xyz.rs
ase-neighborlist-rs/: Cargo.toml  pyproject.toml
ase-neighborlist-rs/src/: cell_list.rs  lib.rs
ase/ai/: __init__.py  _prompts.py  builder.py
ase/calculators/: abc.py  abinit.py  acemolecule.py  acn.py  amber.py  bond_polarizability.py  calculator.py  checkpoint.py  combine_mm.py  dftb.py  eam.py  elk.py  fd.py  gaussian.py  genericfileio.py  gromacs.py  harmonic.py  lammpslib.py  lammpsrun.py  loggingcalc.py  mopac.py  morse.py  octopus.py  orca.py  plumed.py  polarizability.py  qmmm.py  singlepoint.py  socketio.py  tersoff.py  test.py  vdwcorrection.py
ase/cli/: build.py  completion.py  reciprocal.py  run.py
ase/cluster/: factory.py
ase/collections/: collection.py
ase/constraints/: __init__.py  constraint.py  external_force.py  externalforce.py  fix_bond_lengths.py  fix_cartesian.py  fix_com.py  fix_linear_triatomic.py  fix_parametric_relations.py  fix_scaled.py  fix_symmetry.py  fixatoms.py  fixbondlengths.py  fixcartesian.py  fixcom.py  fixedline.py  fixedmode.py  fixedplane.py  fixinternals.py  fixlineartriatomic.py  fixparametricrelations.py  fixscaled.py  fixsymmetry.py  hookean.py  mirror_force.py  mirror_torque.py  mirrorforce.py  mirrortorque.py
ase/data/: __init__.py  pubchem.py
ase/db/: cli.py  core.py  row.py  sqlite.py  table.py  (+1 more)
benchmarks/: compare.py  run_benchmarks.py
changelog.d/: 20250606_092521_noam.bernstein_lammpslib_kokkos.rst  20250611_212309_samtsevichartem_add_tags_dftb_calc.rst  20250627_171318_samtsevichartem_bring_spins_bs_plot.rst  20250703_182655_yuji.ikeda.ac.jp_generic_elk.rst  20250717_145818_asklarsen_changelog_update.rst  20250717_165023_asklarsen_ase_lib_webpage.rst  20250723_160824_yuji.ikeda.ac.jp_test_gamess.rst  20250728_121603_sunghjung3_read_vasp_fix.rst  20250806_000104_asklarsen_update_changelog.rst  20250808_114058_asklarsen_more_website_update.rst  20250812_180558_yuji.ikeda.ac.jp_fix_1720.rst  20250820_094043_noam.bernstein_extxyz_move_mask_iterable.rst  20250822_074631_yuji.ikeda.ac.jp_fix_1723.rst  20250825_074453_yuji.ikeda.ac.jp_fix_1728.rst  20250828_095916_a.j.jackson_1732_rename_npt.rst  20250908_202315_kshinohara0508_mtk_mask.rst  20250911_174651_asklarsen_require_python_3_10.rst  20250911_204220_yuji.ikeda.ac.jp_fix_1752.rst  20250912_013151_yuji.ikeda.ac.jp_fix_1753.rst  20250915_131509_noam.bernstein_LangevinBAOAB.rst  20250915_150136_asklarsen_optimizable_any_ndof_part_ii.rst  20250915_163355_a.j.jackson_sqlite_quotes.rst  20250917_101416_asklarsen_bandpath_for_specific_lattice.rst  20250918_174822_noam.bernstein.rst  20251018_171023_rog32_fixEONconv.rst  20251024_142559_elisabeth.keller.jun_documentation_addingexamples_intro_db.rst  20251024_143723_elisabeth.keller.jun_documentation_addingexamples_db.rst  20251028_133306_elisabeth.keller_documentation_addingexamples_delta.rst  20251030_153548_lempelto_history.rst  20251107_140815_andrew_peterson_gui_defaults.rst  20251124_153945_asklarsen_ase_ga_moved.rst  20251127_150423_yuji.ikeda.ac.jp_update_3847.rst  20251210_144037_asklarsen_openandclose_trajectory.rst  20251211_115043_asklarsen_minus_gradient_fix.rst  20251216_193548_yuji.ikeda.ac.jp_fix_1840.rst  20251219_121544_thomasdwarford_bugfix_extxyz_constraints_from_first_frame.rst  20251221_090721_yuji.ikeda.ac.jp_fix_1824.rst  20251221_163740_asrosen93.rst  20251222_214811_yuji.ikeda.ac.jp_fix_1718.rst  20251222_233240_yuji.ikeda.ac.jp_lammpsrun.rst  (+35 more)
doc/: about.rst  changelog.rst  committee.rst  conf.py  contact.rst  ecosystem.rst  index.rst  install.rst  numpy.rst  python.rst  releasenotes.rst
examples/: .gitignore  GALLERY_HEADER.rst  atomization.py
(+429 files in other folders)
