[workspace]
members = [
    "ase-neighborlist-rs",
    "ase-extxyz-rs",
    "ase-geometry-rs",
    "ase-io-rs",
]
resolver = "2"

[profile.release]
lto = "thin"       # full LTO OOMs on 7 GB CI runners; thin LTO still fast
codegen-units = 4  # parallel codegen reduces peak memory on 2-core runners
opt-level = 3
